--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,7 @@ jobs:
         run: |
           TIMESTAMP_FILE="updates.txt"
           echo "Last checked: $(date -u +"%Y-%m-%dT%H:%M:%SZ")" > "$TIMESTAMP_FILE"
-          git config user.name "peter`s bot"
+          git config user.name "peters bot"
           git config user.email "spicezke@gmail.com"
           git add "$TIMESTAMP_FILE"
           if ! git diff --cached --quiet; then
